# wasi-fetch

./: CHANGELOG.md  Cargo.toml  README.md  prek.toml
.github/workflows/: ci.yml  release.yml
docs/: spec.md
src/: body.rs  error.rs  lib.rs  request.rs
