[package]
name = "wasi-fetch"
version = "0.1.1"
edition = "2024"
description = "Ergonomic HTTP client for WebAssembly components (wasip3)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/actcore/wasi-fetch"
keywords = ["wasm", "wasi", "http", "fetch", "component-model"]
categories = ["wasm", "web-programming::http-client"]
readme = "README.md"

[dependencies]
http = "1.4"
wasip3 = "0.5"
wit-bindgen = { version = "0.55", features = ["async-spawn"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
http-body = "1.0.1"
bytes = "1.11.1"
flume = "0.12.0"
url = "2.5.8"

[lib]
crate-type = ["rlib"]
